--- a/package.json
+++ b/package.json
@@ -97,6 +97,8 @@
   },
   "dependencies": {
     "babel-polyfill": "6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "chalk": "2.4.1",
     "compression": "1.7.2",
     "cross-env": "5.2.0",
