--- a/package.json
+++ b/package.json
@@ -113,12 +113,14 @@
     "lodash": "4.17.10",
     "minimist": "1.2.0",
     "prop-types": "15.6.1",
+    "ramda": "^0.25.0",
     "react": "16.4.1",
     "react-dom": "16.4.1",
     "react-helmet": "5.2.0",
     "react-intl": "2.4.0",
     "react-loadable": "5.4.0",
     "react-redux": "5.0.7",
+    "react-responsive-carousel": "^3.1.41",
     "react-router-dom": "4.3.1",
     "react-router-redux": "5.0.0-alpha.9",
     "redux": "4.0.0",
